--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/mlgbgm"
+              android:background="@drawable/mlgbg"
               android:orientation="vertical">
 	<LinearLayout
 			android:layout_width="match_parent"
