--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,63 +1,71 @@
 <resources>
-
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
-
-
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="MyCheckBox" parent="@android:style/Widget.CompoundButton.CheckBox">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#7F090505</item>
-        <item name="android:paddingLeft">28px</item>
-        <item name="android:button">@drawable/qq_btn_check</item>
-    </style>
-
-    <style name="dialogstyle" parent="android:Animation">
-        <item name="android:windowEnterAnimation">@anim/downloadapp_anim_enter</item>
-        <item name="android:windowExitAnimation">@anim/downloadapp_anim_exit</item>
-    </style>
-
-    <style name="DialogStyle" >
-        <item name="android:windowBackground">@android:color/transparent </item>
-        <item name="android:backgroundDimEnabled">false</item>
-    </style>
-
-    <style name="top_group">
-        <item name="android:layout_height">30dp</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@drawable/qq_constact_font</item>
-        <item name="android:background">@drawable/qq_constact_group</item>
-    </style>
-    <style name="popwin_anim_style">
-        <item name="android:windowEnterAnimation">@anim/pop_enter</item>
-        <item name="android:windowExitAnimation">@anim/pop_out</item>
-    </style>
-    <style name="top_all">
-        <item name="android:layout_height">30dp</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@drawable/qq_constact_font</item>
-        <item name="android:background">@drawable/qq_constact_all</item>
-    </style>
-
+	
+	<!--
+		Base application theme, dependent on API level. This theme is replaced
+		by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+	-->
+	<style name="AppBaseTheme" parent="android:Theme.Light">
+		<!--
+			Theme customizations available in newer API levels can go in
+			res/values-vXX/styles.xml, while customizations related to
+			backward-compatibility can go here.
+		-->
+	</style>
+	
+	
+	<!-- Base application theme. -->
+	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<!-- Customize your theme here. -->
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
+	</style>
+	
+	<style name="MyCheckBox" parent="@android:style/Widget.CompoundButton.CheckBox">
+		<item name="android:textSize">16sp</item>
+		<item name="android:textColor">#7F090505</item>
+		<item name="android:paddingLeft">28px</item>
+		<item name="android:button">@drawable/qq_btn_check</item>
+	</style>
+	
+	<style name="dialogstyle" parent="android:Animation">
+		<item name="android:windowEnterAnimation">@anim/downloadapp_anim_enter</item>
+		<item name="android:windowExitAnimation">@anim/downloadapp_anim_exit</item>
+	</style>
+	
+	<style name="DialogStyle">
+		<item name="android:windowBackground">@android:color/transparent</item>
+		<item name="android:backgroundDimEnabled">false</item>
+	</style>
+	
+	<style name="top_group">
+		<item name="android:layout_height">30dp</item>
+		<item name="android:layout_width">0dp</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:textSize">16sp</item>
+		<item name="android:textColor">@drawable/qq_constact_font</item>
+		<item name="android:background">@drawable/qq_constact_group</item>
+	</style>
+	<style name="popwin_anim_style">
+		<item name="android:windowEnterAnimation">@anim/pop_enter</item>
+		<item name="android:windowExitAnimation">@anim/pop_out</item>
+	</style>
+	<style name="top_all">
+		<item name="android:layout_height">30dp</item>
+		<item name="android:layout_width">0dp</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:textSize">16sp</item>
+		<item name="android:textColor">@drawable/qq_constact_font</item>
+		<item name="android:background">@drawable/qq_constact_all</item>
+	</style>
+	<style name="dialg_fs">
+		<item name="android:windowBackground">@color/transparent</item>
+		<item name="android:windowNoTitle">true</item>
+		<item name="android:windowFrame">@null</item>
+		<item name="android:windowIsFloating">true</item>
+		<item name="android:windowContentOverlay">@null</item>
+		<item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+		<item name="android:windowIsTranslucent">true</item>
+		<item name="android:backgroundDimEnabled">true</item>
+	</style>
 </resources>
